Attempt 4, For Loop version

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=TKBachelorControlRig
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonExampleMap.ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/TestMap.TestMap
+GameDefaultMap=/Game/TestMap.TestMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
